[metadata]
name = volvooncall
version = 0.10.0
description = Communicate with VOC
url = https://github.com/molobrakos/volvooncall
license = Unlicense
author = Erik
author_email = error.errorsson@gmail.com
maintainer = decompil3d

[options]
scripts =
	voc
packages =
	volvooncall
install_requires =
	aiohttp<4.0
python_requires = >=3.8

[options.extras_require]
console =
	certifi
	docopt
	geopy>=1.14.0
mqtt =
	amqtt>=0.10.0,<0.11.0
	certifi

[bumpversion]
current_version = 0.9.2
commit = True
tag = True
files = volvooncall/volvooncall.py

[flake8]
exclude = .venv,.git,.tox,include,lib,bin,.tox,.tmp
import-order-style = pep8

[pytype]
inputs = voc volvooncall
python_version = 3.9
disable = 
	module-attr,
	attribute-error,
	import-error
