[bumpversion]
current_version = 0.10.4
commit = True
tag = True
files = volvooncall/volvooncall.py

[metadata]
name = volvooncall
version = 0.10.4
description = Communicate with VOC
url = https://github.com/molobrakos/volvooncall
license = Unlicense
author = Erik
author_email = error.errorsson@gmail.com
maintainer = decompil3d

[options]
scripts = 
	voc
packages = 
	volvooncall
install_requires = 
	aiohttp<4.0
python_requires = >=3.10

[options.extras_require]
console = 
	certifi
	docopt
	geopy>=1.14.0
mqtt = 
	amqtt>=0.10.0,<0.11.0
	certifi

[flake8]
exclude = .venv,.git,.tox,include,lib,bin,.tox,.tmp
import-order-style = pep8

[pytype]
inputs = voc volvooncall
python_version = 3.10
disable = 
	module-attr,
	attribute-error,
	import-error
